force-app/main/default/objects/IdvAc_Verification_Status_Config__mdt/IdvAc_Verification_Status_Config__mdt.object-meta.xml
<CustomObject>
    <label>IdvAc Verification Status Config</label>
    <pluralLabel>IdvAc Verification Status Config</pluralLabel>
</CustomObject>