force-app/main/default/objects/IdvAc_Verification_Status_Config__mdt/fields/Locking_Mode__c.field-meta.xml
<CustomField>
    <fullName>Locking_Mode__c</fullName>
    <label>Locking Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
                <default>true</default>
                <label>Locked</label>
            </value>
            <value>
                <fullName>Unlocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>