force-app/main/default/objects/IdvAc_Verification_Status_Config__mdt/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>The API value of verification status.</description>
    <label>Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>