force-app/main/default/objects/IdvAc_Verification_Status_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Verification_Status__c</columns>
    <columns>Type__c</columns>
    <columns>Locking_Mode__c</columns>
    <columns>Badge_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>